solve the sections titles nav bug on small screen

--- a/nut/static/css/web/web-seller-style.less
+++ b/nut/static/css/web/web-seller-style.less
@@ -36,7 +36,7 @@
           text-align: center;
           border:1px solid @seller-btn-color;
           color:@seller-btn-color;
-          border-radius:20px;
+          border-radius:30px;
           &:hover{
             color:#ffffff;
             background-color: @seller-btn-color;
@@ -49,13 +49,18 @@
     .sections-titles-wrapper{
       padding:0;
       margin:0;
+       @media screen and (max-width:768px){
+         position:fixed;
+         top:70px;
+         left:0;
+         z-index: 1000;
+              }
       .sections-titles-nav{
         text-align:center;
         ul{
 
           li{
             display: inline-block;
-            padding:0 10px;
             //font-weight:700;
             a{
               color: @common-gray;
@@ -65,11 +70,40 @@
               &:hover{
                 cursor: pointer;
               }
+              &.section-title{
+                @media screen and (min-width:768px){
+                  &.section-first-title{
+                    &:after{
+                      content: " DELICACY";
+                    }
+                  }
+                  &.section-second-title{
+                    &:after{
+                      content: " CULTURE";
+                    }
+                  }
+                  &.section-third-title{
+                    &:after{
+                      content: " LOOKS";
+                    }
+                  }
+                  &.section-forth-title{
+                    &:after{
+                      content: " LIFESTYLE";
+                    }
+                  }
+
+              }
+
+              }
+
             }
             span{
-              padding-left: 10px;
+              padding: 0 10px;
               color:#F8E71C;
-
+              @media screen and (max-width:768px){
+               padding:0 5px;
+              }
             }
           }
         }
